KNMSC-20 Added IoT CSS design.

--- a/edge-analytics-ui/src/index.html
+++ b/edge-analytics-ui/src/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link type="text/css" rel="stylesheet" href="css/mdsp-css.min.css"  media="screen,projection" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EdgeAnalyticsUi</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+
+        <!-- [5] Apply styles -->
+        <div class="uxt uxt-defaults forceDefaultElements" id="_mdspcontent">
+          <h1>Starter template</h1>
+          <!-- Sample content -->
+          <h2>A simple message</h2>
+          <div class="messageWrapper">
+              <div class="message message--withIcon">
+                  <h1 class="message__headline">hello world</h1>
+                  <div>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  </div>
+              </div>
+          </div>
+          <h2>Additional html elements</h2>
+          <ul>
+              <li>Lorem ipsum</li>
+              <li>Lorem ipsum</li>
+          </ul>
+          <button class="button--primary">A simple button</button>
+      </div>
   <app-root></app-root>
 </body>
 </html>
